syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

package ride.entity.v1alpha1;

// Generated according to https://cloud.google.com/apis/design/standard_methods
service EntityService {
  rpc ListEntities(ListEntitiesRequest) returns (ListEntitiesResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/entitys"
    };
  }

  rpc GetEntity(GetEntityRequest) returns (GetEntityResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=entitys/*}"
    };
  }

  rpc CreateEntity(CreateEntityRequest) returns (CreateEntityResponse) {
    option (google.api.http) = {
      post: "/v1alpha1/entitys"
      body: "*"
    };
  }

  rpc UpdateEntity(UpdateEntityRequest) returns (UpdateEntityResponse) {
    option (google.api.http) = {
      patch: "/v1alpha1/{entity.name=entitys/*}"
      body: "*"
    };
  }

  rpc DeleteEntity(DeleteEntityRequest) returns (DeleteEntityResponse) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=entitys/*}"
    };
  }
}

message Entity {
  // Relative resource name of Entity, for example: "entitys/entity1"
  string name = 1 [(validate.rules).string = {
                    pattern: "^entitys/[A-Za-z0-9_-]+$",
                    ignore_empty: true
                  }];
  
  // Output only. Timestamp when the Entity was created.
  google.protobuf.Timestamp create_time = 4;
}

message ListEntitiesRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListEntitiesResponse {
  // The field name should match the noun "Entity" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated Entity entitys = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetEntityRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message GetEntityResponse {
  // The field name should match the noun "Entity" in the method name.
  Entity entity = 1;
}

message CreateEntityRequest {
  // The parent resource name where the Entity is to be created.
  string parent = 1;

  // The Entity id to use for this Entity.
  string entity_id = 2;

  // The Entity resource to create.
  // The field name should match the Noun in the method name.
  Entity entity = 3;
}

message CreateEntityResponse {
  // The field name should match the noun "Entity" in the method name.
  Entity entity = 1;
}

message UpdateEntityRequest {
  // The Entity resource which replaces the resource on the server.
  Entity entity = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2;
}

message UpdateEntityResponse {
  // The field name should match the noun "Entity" in the method name.
  Entity entity = 1;
}

message DeleteEntityRequest {
  // The resource name of the Entity to be deleted.
  string name = 1;
}

message DeleteEntityResponse {
}
